# tache

./: .gitignore  Cargo.toml  README.md
README.mdhttps:/github.com/Jamdan2/tache/: actions
core/: Cargo.toml
core/src/: lib.rs  prelude.rs  state.rs
core/src/events/: bus.rs  events.rs  mod.rs  prelude.rs
core/src/robot/: mod.rs  prelude.rs  robot.rs
core/src/subsystems/: commands.rs  dispatcher.rs  mod.rs  prelude.rs  subsystem.rs
sample/: Cargo.toml
sample/src/: main.rs
