[package]
name = "tache"
version = "0.1.0"
authors = ["Aidan Heller <asfheller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4.0"
async-std = "1.6.3"
futures = "0.3.5"
downcast = "0.10.0"
tokio = { version = "0.2", features = ["full", "time"] }
